--- a/src/Defaults.css
+++ b/src/Defaults.css
@@ -3,5 +3,16 @@
 }
 
 body {
-	background: linear-gradient(to right, rgb(238, 240, 241), rgb(234, 239, 241), rgb(231, 237, 240), rgb(220, 232, 237));
+	background: linear-gradient(
+		to right,
+		rgb(238, 240, 241),
+		rgb(234, 239, 241),
+		rgb(231, 237, 240),
+		rgb(220, 232, 237)
+	);
+}
+
+h2.labelTitle {
+	padding-top: 110px;
+	text-align: center;
 }
