--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,184 +1,187 @@
 * {
-    font-family: Helvetica;
-    font-weight: 200;
-    margin: 0;
-    padding: 0;
+	font-family: Helvetica;
+	font-weight: 200;
+	margin: 0;
+	padding: 0;
 }
 
 .menubar {
-    padding-top: 3vh;
-    height: 70px;
-    font-size: 20px;
-    padding-left: 2vw;
-    padding-right: 2vw;
-    background: white;
-    display: flex;
-    flex-direction: row;
-    position: relative;
+	padding-top: 3vh;
+	height: 70px;
+	font-size: 20px;
+	padding-left: 2vw;
+	padding-right: 2vw;
+	background: white;
+	display: flex;
+	flex-direction: row;
+	position: fixed;
+	width: 96vw;
+	margin-bottom: 70px;
+	z-index: 1;
 }
 
 .name {
-    padding-top: 10px;
-    background: transparent;
-    color: black;
+	padding-top: 10px;
+	background: transparent;
+	color: black;
 }
 
 .name span {
-    color: #5c52edd7;
-    font-weight: 800;
+	color: #5c52edd7;
+	font-weight: 800;
 }
 
 .burger {
-    cursor: pointer;
-    padding: 5px 10px 5px 10px;
-    position: absolute;
-    background: transparent;
-    right: 2%;
-    color: rgb(126, 125, 125);
-    border: none;
-    font-size: 25px;
-    border-radius: 5px;
+	cursor: pointer;
+	padding: 5px 10px 5px 10px;
+	position: absolute;
+	background: transparent;
+	right: 2%;
+	color: rgb(126, 125, 125);
+	border: none;
+	font-size: 25px;
+	border-radius: 5px;
 }
 
 .burger:hover {
-    background: rgb(244, 244, 252);
+	background: rgb(244, 244, 252);
 }
 
 .page {
-    color: black;
-    padding-top: 10px;
-    position: absolute;
-    left: 45%;
-    background: transparent;
+	color: black;
+	padding-top: 10px;
+	position: absolute;
+	left: 45%;
+	background: transparent;
 }
 
 /* sdfsfd}*/
 .menuNav {
-    display: flex;
-    flex-direction: column;
-    overflow-y: hidden;
-    /* list-style: none; */
-    position: absolute;
-    top: 0;
-    background: #ffffff;
-    width: 350px;
-    height: 100vh;
-    overflow: hidden;
-    z-index: 9;
+	display: flex;
+	flex-direction: column;
+	overflow-y: hidden;
+	/* list-style: none; */
+	position: absolute;
+	top: 0;
+	background: #ffffff;
+	width: 350px;
+	height: 100vh;
+	overflow: hidden;
+	z-index: 9;
 }
 
 .menuNav.showMenu {
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    transition: all 0.2s ease-in;
-    box-shadow: 0px 1px 10px 1px rgb(190, 190, 192);
+	right: 0;
+	display: flex;
+	flex-direction: column;
+	transition: all 0.2s ease-in;
+	box-shadow: 0px 1px 10px 1px rgb(190, 190, 192);
 }
 
 .menu-title {
-    display: flex;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 
 .menu-title h1 {
-    font-weight: 900;
-    padding-left: 70px;
-    padding-right: 40vw;
-    font-weight: 900;
-    padding-left: 70px;
-    padding-right: 40vw;
-    color: #4b4848;
+	font-weight: 900;
+	padding-left: 70px;
+	padding-right: 40vw;
+	font-weight: 900;
+	padding-left: 70px;
+	padding-right: 40vw;
+	color: #4b4848;
 }
 
 .menuNav.closeMenu {
-    right: 0;
-    transition: 0.2s ease-out;
-    width: 0%;
+	right: 0;
+	transition: 0.2s ease-out;
+	width: 0%;
 }
 
 .menuNav button {
-    position: relative;
-    cursor: pointer;
-    border: none;
+	position: relative;
+	cursor: pointer;
+	border: none;
 }
 
 .menuButt-holder {
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
+	display: flex;
+	height: 100vh;
+	flex-direction: column;
 }
 
 .menu-button {
-    text-decoration: none;
-    text-align: center;
-    color: rgb(118, 117, 117);
-    font-size: 20px;
-    margin: none;
-    height: 60px;
-    width: 100%;
-    background: transparent;
+	text-decoration: none;
+	text-align: center;
+	color: rgb(118, 117, 117);
+	font-size: 20px;
+	margin: none;
+	height: 60px;
+	width: 100%;
+	background: transparent;
 }
 
 .menu-button:hover {
-    background: #e7ebf5;
+	background: #e7ebf5;
 }
 
 .menus-button.special {
-    font-size: 20px;
-    height: 40px;
+	font-size: 20px;
+	height: 40px;
 
-    background: linear-gradient(to right, #7862fb, #9138f6);
-    /* background: #5c52edd7; */
-    margin-top: 20px;
-    margin-bottom: 10px;
-    color: rgb(255, 255, 255);
-    margin-left: 10%;
-    width: 80%;
-    /* font-weight: 500; */
-    text-align: center;
-    border-radius: 17.5px;
-    /* box-shadow: 0px 2px 10px 2px rgb(254, 194, 227); */
+	background: linear-gradient(to right, #7862fb, #9138f6);
+	/* background: #5c52edd7; */
+	margin-top: 20px;
+	margin-bottom: 10px;
+	color: rgb(255, 255, 255);
+	margin-left: 10%;
+	width: 80%;
+	/* font-weight: 500; */
+	text-align: center;
+	border-radius: 17.5px;
+	/* box-shadow: 0px 2px 10px 2px rgb(254, 194, 227); */
 }
 
 .menus-button.special:hover {
-    background: linear-gradient(to right, #614ecb, #792ecf);
+	background: linear-gradient(to right, #614ecb, #792ecf);
 }
 
 .top-holder {
-    background: #ffffff;
-    display: flex;
-    flex-direction: row;
+	background: #ffffff;
+	display: flex;
+	flex-direction: row;
 }
 
 .top-holder img {
-    margin-left: 25px;
-    margin-top: 18px;
-    width: 80px;
-    height: 45px;
+	margin-left: 25px;
+	margin-top: 18px;
+	width: 80px;
+	height: 45px;
 }
 
 .top-holder h1 {
-    font-size: 23px;
-    padding-top: 32px;
-    padding-right: 20px;
+	font-size: 23px;
+	padding-top: 32px;
+	padding-right: 20px;
 }
 
 .x-button {
-    color: rgb(126, 125, 125);
-    margin-left: 63px;
-    font-size: 20px;
-    margin-bottom: 27px;
-    margin-top: 22px;
-    padding: 7px 10px 7px 10px;
-    border-radius: 10px;
-    background: transparent;
+	color: rgb(126, 125, 125);
+	margin-left: 63px;
+	font-size: 20px;
+	margin-bottom: 27px;
+	margin-top: 22px;
+	padding: 7px 10px 7px 10px;
+	border-radius: 10px;
+	background: transparent;
 }
 
 .x-button:hover {
-    background: rgb(238, 238, 250);
+	background: rgb(238, 238, 250);
 }
 
 .top-holder i {
-    padding: none;
-    margin: none;
+	padding: none;
+	margin: none;
 }
