--- a/src/Styles/EventsHolder.css
+++ b/src/Styles/EventsHolder.css
@@ -1,7 +1,3 @@
-.main {
-	height: 100vh;
-	overflow-x: hidden;
-}
 
 .temp.nav {
 	width: 100vw;
@@ -9,10 +5,13 @@
 }
 
 .headers {
+	
 	font-size: 30px;
 	padding-left: 150px;
+	padding-top: 80px;
 	font-weight: 800;
 	color: rgb(175, 172, 169);
+	color: white;
 }
 
 .body-holder {
@@ -30,9 +29,19 @@
 
 .body-holder h3 {
 	font-size: 22px;
-	padding-bottom: 5px;
 	color: rgb(83, 38, 110);
 	font-weight: 600;
+}
+
+div.label{
+	width: 650px;
+	padding-top: 40px;
+	margin-top: 25px;
+	background: rgb(106, 130, 197);
+	background-image: linear-gradient(to right, rgb(10, 36, 124) , rgb(75, 120, 202));
+	box-shadow: 1px 12px 40px 20px rgba(40, 40, 42, 0.2);
+	border-radius: 15px 40px 15px 40px;
+	height: 100px;
 }
 
 .body-holder h4 {
@@ -84,6 +93,7 @@
 }
 
 .housing {
+	margin-top: 200px;
 	padding-top: 50px;
 	display: flex;
 	flex-direction: row;
@@ -96,11 +106,12 @@
 	margin-top: 15px;
 	margin-right: 10px;
 	margin-bottom: 15px;
-	border-radius: 23px;
+	border-radius: 13px;
 	padding-left: 15px;
 	min-height: 80px;
 	/* box-shadow: 0px 2px 25px 5px rgb(43, 42, 42); */
 	background: rgb(255, 255, 255);
+	box-shadow: 1px 1px 40px 10px rgba(150, 150, 156, 0.2);
 	transition: width 2s, height 2s, background-color 2s, transform 2s;
 }
 
@@ -109,13 +120,39 @@
 }
 
 .inside {
-	margin-top: 20px;
 	width: 550px;
-	height: 63vh;
-	margin-left: 5px;
+	margin-left: 50px;
+	display: flex;
+	flex-direction: column;
+	padding: 10px 10px 10px 10px;
 	/* border-radius: 20px; */
 	background: transparent;
+	background: rgb(246, 246, 248);
 	overflow-y: scroll;
+	border-radius: 0px 0px 30px 30px;
+	height: 600px;
+}
+
+.plus{
+	position: relative;
+	top: 60px;
+	left: 10px;
+	padding: 8px 10px 8px 10px;
+	border-radius: 30px;
+	border: none;
+	cursor: pointer;
+	background: white;
+	box-shadow: 12px 12px 40px 10px rgba(16, 60, 220, 0.2);
+}
+
+.plus:hover{
+	background: rgb(239, 236, 236);
+	color: blue;
+}
+
+.bi.bi-plus-lg{
+	font-size: 35px;
+	color: rgb(122, 122, 240);
 }
 
 ::-webkit-scrollbar {
@@ -130,16 +167,22 @@
 }
 
 #subhousing {
-	margin-left: 200px;
-	padding-top: 20px;
 	justify-content: space-between;
-	padding-right: 50px;
 	border-radius: 10px;
 	/* box-shadow: 0px 5px 20px 5px rgb(232, 226, 226); */
-	width: 500px;
-	height: 77vh;
+	width: 650px;
+	margin-top: 120px;
+	display: flex;
+	flex-direction: column;
 }
 
+@media screen and (max-width: 1350px) {
+
+	.event-holder-box {
+		margin-left: 40px;
+	}
+}
+/* 
 @media screen and (max-width: 1350px) {
 	.temp {
 		position: relative;
@@ -173,4 +216,4 @@
 		width: 450px;
 		margin-right: 80px;
 	}
-}
+} */
