--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -15,20 +15,43 @@
 	display: flex;
 	flex-direction: row;
 	position: fixed;
+	top:0;
 	width: 96vw;
-	margin-bottom: 70px;
 	z-index: 1;
+	justify-content: space-around;
 }
 
 .name {
 	padding-top: 10px;
 	background: transparent;
 	color: black;
+	width: 33vw;
 }
 
 .name span {
 	color: #5c52edd7;
 	font-weight: 800;
+}
+
+button.special {
+	font-size: 13px;
+	height: 30px;
+	border: none;
+	cursor: pointer;
+	background: linear-gradient(to right, #7862fb, #9138f6);
+	/* background: #5c52edd7; */
+	color: rgb(255, 255, 255);
+	width: 100px;
+	margin-top: 5px;
+	/* font-weight: 500; */
+	text-align: center;
+	box-shadow: 1px 1px 40px 10px rgba(24, 24, 25, 0.2);
+	border-radius: 5px;
+	/* box-shadow: 0px 2px 10px 2px rgb(254, 194, 227); */
+}
+
+button.special:hover {
+	background: linear-gradient(to right, #614ecb, #792ecf);
 }
 
 .burger {
@@ -50,8 +73,8 @@
 .page {
 	color: black;
 	padding-top: 10px;
-	position: absolute;
 	left: 45%;
+	width: 33vw;
 	background: transparent;
 }
 
