--- a/src/Styles/Weather.css
+++ b/src/Styles/Weather.css
@@ -20,10 +20,6 @@
 }
 
 @media screen and (max-width: 1350px) {
-	.housing {
-		overflow-x: hidden;
-		flex-direction: column-reverse;
-	}
 
 	.weather {
 		margin-left: 0px;
@@ -32,7 +28,6 @@
 	}
 
 	.subHolder {
-		margin-bottom: 200px;
 	}
 }
 
@@ -71,7 +66,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: none;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
 	border-radius: 20px;
 	margin-bottom: 10px;
@@ -79,14 +74,16 @@
 }
 
 .noLocation {
-	padding-top: 80px;
-	padding-left: 50px;
+	padding-left: 20px;
 	font-size: 25px;
+	position: relative;
+	top: -30px;
 	margin: 0px;
 }
 
 .minMax {
 	margin-top: 40px;
+	padding-top: 10px;
 	margin-bottom: 10px;
 	width: 200px;
 	height: 100px;
@@ -189,3 +186,175 @@
 	margin-left: 110px;
 	margin-bottom: 30px;
 }
+
+.main {
+	left: 0;
+  }
+  
+  div.weather {
+	align-self: flex-start;
+	background: white;
+	display: flex;
+	color: rgb(110, 113, 126);
+	border-radius: 1rem;
+	flex-direction: column;
+	min-height: 200px;
+	height: 220px;
+	min-width: 250px;
+	padding: 10px;
+	max-width: 270px;
+	margin-right: 0px;
+	padding-right: 0px;
+	margin: 0px 0px 0px 0px;
+	padding: 25px 25px 25px 25px;
+  }
+  
+  .moreInfo img{
+	border-radius: 20%;
+	background: rgb(208, 221, 252);
+  
+  }
+  
+  .cityName {
+	color: rgb(48, 99, 216);
+	font-size: 22.5px;
+	font-weight: 300;
+	height: 10%;
+  }
+  
+  .tempInfo {
+	display: flex;
+	flex-direction: row;
+	margin: 0px 0px 0px 0px;
+	font-weight: 300;
+	padding: 0px 0px 0px 0px;
+	height: 100%;
+	width: 100%;
+	text-align: center;
+  }
+  
+  div.weather #des{
+	color: rgb(92, 111, 219);
+	font-weight: 400;
+	margin-top: 0;
+	text-align: center;
+  }
+  
+  .temp {
+	color: black;
+	text-align: center;
+	font-size: 7vh;
+	font-weight: 300;
+	margin: 0px 0px 0px 0px;
+  
+  }
+  
+  .moreInfo {
+	padding-left: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: end;
+	align-items: end;
+  }
+  
+  .moreInfo img{
+	min-height: 75px;
+	min-width: 75px;
+	margin-bottom: 20px;
+  }
+  
+  .noLocation {
+	font-size: 3.5vh;
+	margin: 0px;
+  }
+  
+  .minMax {
+	margin-bottom: 10px;
+  }
+  
+  .cityInput {
+	box-shadow: none;
+	height: 2.5vh;
+	width: 78%;
+	margin-top: 2vh;
+	border-radius: 0.3rem;
+	font-size: 2vh;
+  }
+  
+  .noloc {
+	flex-direction: column;
+	text-align: center;
+	justify-content: center;
+	margin: 0;
+  }
+  
+ .bi.bi-pencil-fill{
+	position: relative;
+	top: -60px;
+	cursor: pointer;
+	background: rgb(156, 156, 250);
+	padding: 10px 12px 10px 12px;
+	border-radius: 30px;
+	left: 110px;
+	color: white;
+ }
+ .bi.bi-pencil-fill:hover{
+	background: rgb(133, 133, 221);
+ }
+
+ .subHolder{
+	visibility: hidden;
+	position: relative;
+	top: -310px;
+ }
+
+ .housing-weather{
+	display: flex;
+	flex-direction: column;
+	margin-top: 150px;
+	margin-left: 30px;
+	padding-bottom: 0px ;
+	margin-bottom: 0px;
+	height: 400px;
+ }
+
+ .subHolder{
+	padding-bottom: 0px ;
+	margin-bottom: 0px;
+ }
+
+ .GetUserLocation .bi.bi-x{
+	position: relative;
+	top: -13px;
+	left: 470px;
+	width:37px;
+	font-size: 35px;
+	background: rgb(134, 134, 218);
+	cursor: pointer;
+	color: white;
+	border-radius: 30px;
+	padding-top: 2px;
+	padding-left: 4px;
+	padding-right: 3px;
+ }
+ .GetUserLocation .bi.bi-x:hover{
+	background: rgb(105, 105, 204);
+ }
+
+ .weathers .bi.bi-pencil-fill{
+	color: rgb(255, 255, 255);
+	/* width: 50px;
+	height: 60px; */
+	position: relative;
+	top: -80px;
+	left: 150px;
+	border-radius: 100px;
+	padding-bottom: 10px;
+	font-size: 18px;
+	cursor: pointer;
+	background: rgb(123, 123, 234);
+ }
+
+ .weathers .bi.bi-pencil-fill:hover{
+	background: rgb(102, 102, 195);
+ }
