--- a/src/Styles/EventsHolder.css
+++ b/src/Styles/EventsHolder.css
@@ -34,7 +34,7 @@
 }
 
 div.label{
-	width: 650px;
+	width: 630px;
 	padding-top: 40px;
 	margin-top: 25px;
 	background: rgb(106, 130, 197);
@@ -47,6 +47,8 @@ div.label{
 .body-holder h4 {
 	font-size: 18px;
 	color: rgb(0, 0, 0);
+	overflow: hidden;
+	width: 400px;
 	padding-bottom: 10px;
 }
 
@@ -121,7 +123,7 @@ div.label{
 
 .inside {
 	width: 550px;
-	margin-left: 50px;
+	margin-left: 30px;
 	display: flex;
 	flex-direction: column;
 	padding: 10px 10px 10px 10px;
@@ -131,6 +133,7 @@ div.label{
 	overflow-y: scroll;
 	border-radius: 0px 0px 30px 30px;
 	height: 600px;
+	margin-bottom: 40px;
 }
 
 .plus{
@@ -171,7 +174,7 @@ div.label{
 	border-radius: 10px;
 	/* box-shadow: 0px 5px 20px 5px rgb(232, 226, 226); */
 	width: 650px;
-	margin-top: 120px;
+	margin-left: 20px;
 	display: flex;
 	flex-direction: column;
 }
@@ -182,38 +185,37 @@ div.label{
 		margin-left: 40px;
 	}
 }
-/* 
-@media screen and (max-width: 1350px) {
-	.temp {
-		position: relative;
-	}
-
-	.housing {
-		align-items: center;
-		flex-direction: column;
-	}
-
-	#subhousing {
-		align-self: center;
-		margin-left: 20px;
-		margin-right: 20px;
-		margin-top: 50px;
-	}
-}
-
-@media screen and (max-height: 700px) {
-	.temp {
-		position: relative;
-	}
-
-	.outside {
-		margin-bottom: 200px;
-	}
-}
 
 @media screen and (max-width: 700px) {
-	#subhousing {
-		width: 450px;
-		margin-right: 80px;
+	div.label{
+		width: 475px;
+		align-self: center;	
 	}
-} */
+
+	label.headers{
+		padding: 0px;
+		margin-left: 80px;
+	}
+	.inside{
+		width: 410px;
+		margin-left: 5px;
+		align-self: center;	
+	}
+	#subhousing{
+		width: 450px;
+		padding-left: 20px;
+	}
+	.bi.bi-check2{
+		left: 0px;
+	}
+
+	.body-holder h4{
+		width: 300px;
+		overflow: hidden;
+	}
+
+	.housing-temp{
+		min-width: 530px;
+	}
+
+}
