--- a/src/Styles/EventInput.css
+++ b/src/Styles/EventInput.css
@@ -233,6 +233,10 @@ textarea {
 	display: inline;
 }
 
+.event-holder-box .datePicker.react-datepicker-ignore-onclickoutside{
+	border: 1px solid rgb(230, 224, 224);
+}
+
 .selectDate-holder {
 	margin-top: 20px;
 	max-height: 100px;
