--- a/src/Styles/EventsHolder.css
+++ b/src/Styles/EventsHolder.css
@@ -25,12 +25,16 @@
 
 .body-holder {
 	width: 350px;
+	/* display: flex;
+	flex-direction: column; */
 }
 
 .body-holder h3 {
 	font-size: 22px;
 	color: rgb(83, 38, 110);
 	font-weight: 600;
+	width: 275px;
+	overflow-wrap: break-word;
 }
 
 div.label{
@@ -47,8 +51,8 @@ div.label{
 .body-holder h4 {
 	font-size: 18px;
 	color: rgb(0, 0, 0);
-	overflow: hidden;
-	width: 400px;
+	overflow-wrap: break-word;
+	width: 300px;
 	padding-bottom: 10px;
 }
 
@@ -103,6 +107,7 @@ div.label{
 }
 
 .event-holder-card {
+	display: flex;
 	padding: 10px;
 	margin-left: 10px;
 	margin-top: 15px;
@@ -110,7 +115,7 @@ div.label{
 	margin-bottom: 15px;
 	border-radius: 13px;
 	padding-left: 15px;
-	min-height: 80px;
+
 	/* box-shadow: 0px 2px 25px 5px rgb(43, 42, 42); */
 	background: rgb(255, 255, 255);
 	box-shadow: 1px 1px 40px 10px rgba(150, 150, 156, 0.2);
@@ -210,8 +215,13 @@ div.label{
 	}
 
 	.body-holder h4{
-		width: 300px;
+		width: 250px;
 		overflow: hidden;
+		margin-right: 0px;
+	}
+
+	.body-holder{
+		width: 300px;
 	}
 
 	.housing-temp{
