--- a/src/Styles/Weather.css
+++ b/src/Styles/Weather.css
@@ -6,7 +6,7 @@
 }
 
 .widget{
-	
+	display: flex;
 }
 
 
@@ -18,7 +18,7 @@
 	color: white;
 	border-radius: 45px;
 	flex-direction: column;
-	width: 375px;
+	width: 320px;
 	height: 195px;
 	padding-bottom: 20px;
 }
@@ -319,7 +319,10 @@
  .housing-weather{
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	margin-top: 150px;
+	position: relative;
+	top: -90px;
 	padding-bottom: 0px ;
 	margin-bottom: 0px;
 	height: 400px;
@@ -363,6 +366,15 @@
  .weathers .bi.bi-pencil-fill:hover{
 	background: rgb(102, 102, 195);
  }
+
+
+ @media screen and (max-width: 1300px) {
+	.housing-weather{
+		top:0px;
+		margin-bottom: 100px;
+	}
+ }
+ 
 
  @media screen and (max-width: 700px) {
 	div.weather{
