finished login-and a couple of resizing issues

--- a/src/Styles/Reset.css
+++ b/src/Styles/Reset.css
@@ -15,9 +15,8 @@
     background: transparent;
     overflow: hidden;
     display: flex;
-    flex-direction:row;
-    width:100vw;
-    height: 100vh;
+    flex-direction:column;
+
 }
 
 .side-panel{
