--- a/src/Styles/Settings.css
+++ b/src/Styles/Settings.css
@@ -1,20 +1,53 @@
 .settings-page {
 	display: flex;
-	text-align: center;
 	flex-direction: column;
-	align-items: center;
+	margin-left: 100px;
 }
 
 .settings-holder {
-	width: 50vw;
-	border: 1px solid black;
+	width: 40vw;
 	display: flex;
 	flex-direction: column;
+	margin-top: 100px;
+	background-color: white;
+	box-shadow: 0px 5px 50px grey;
+	padding-bottom: 20px;
+	border-radius: 0.2em;
+}
+
+.settings-page .content-holder {
+	display: flex;
+	width: 100%;
+	font-size: 1em;
+}
+
+.settings-page .labels {
+	width: 50%;
+	font-weight: 800;
+}
+
+.settings-page .edit-icon {
+	font-size: 0.5em;
+	padding: 0;
+	margin-left: 70%;
+}
+
+.settings-page .label.text {
+	padding: 10px 20px;
+}
+
+.settings-page .labels .text {
+	font-weight: bold;
+}
+
+.settings-page .content {
+	padding-right: 20px;
+	width: 50%;
 }
 
 .settings-page .back-button {
 	border: none;
-	position: absolute;
+	position: fixed;
 	margin-top: 10px;
 	margin-left: 10px;
 	left: 0;
@@ -31,9 +64,18 @@
 	opacity: 0.9;
 }
 
+.settings-page h3 {
+	padding-left: 20px;
+}
+
 .settings-page h1 {
 	color: black;
-	font-size: 3rem;
-	margin-top: calc(10px + 3vh);
-	margin-bottom: 20px;
+	font-size: 2rem;
+	margin-bottom: 30px;
+	margin-top: 30px;
+	padding-left: 20px;
+}
+
+.settings-page hr {
+	margin-bottom: 30px;
 }
