--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -1,10 +1,21 @@
 .dashPage{
     display: flex;
     justify-content: center;
-    padding-left: 30px;
+    /* padding-left: 250px; */
     padding-right: 30px;
     margin-bottom: 20px;
     height: fit-content;
+}
+
+.dashPage-holders{
+    display: flex;
+    flex-direction: row;
+}
+
+.DasH{
+    display: flex;
+    flex-direction: column;
+    margin-left: 250px;
 }
 
 .column{
