--- a/src/Styles/Settings.css
+++ b/src/Styles/Settings.css
@@ -10,9 +10,9 @@
 	flex-direction: column;
 	margin-top: 100px;
 	background-color: white;
-	box-shadow: 0px 5px 50px grey;
+	box-shadow: 0px 5px 50px rgb(218, 220, 237);
 	padding-bottom: 20px;
-	border-radius: 0.2em;
+	border-radius: 1rem;
 }
 
 .settings-page .content-holder {
@@ -26,10 +26,30 @@
 	font-weight: 800;
 }
 
+.settings-page .title-holder {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 15px;
+	margin-top: 15px;
+}
+
+#password-display {
+	background: transparent;
+	padding-left: 10px 20px;
+	font-size: 1em;
+	height: 16.75%;
+}
+
+input[type="password"]:disabled {
+	background: transparent;
+	color: black;
+}
+
 .settings-page .edit-icon {
-	font-size: 0.5em;
-	padding: 0;
-	margin-left: 70%;
+	font-size: 1.25em;
+	margin-right: 10px;
 }
 
 .settings-page .label.text {
@@ -45,25 +65,6 @@
 	width: 50%;
 }
 
-.settings-page .back-button {
-	border: none;
-	position: fixed;
-	margin-top: 10px;
-	margin-left: 10px;
-	left: 0;
-	border-radius: 0.4rem;
-	width: 4vw;
-	height: 3vh;
-	background-color: rebeccapurple;
-	color: white;
-
-	transition: all 0.3s cubic-bezier(0.5, -0.75, 0.6, 1.69);
-}
-
-.back-button:hover {
-	opacity: 0.9;
-}
-
 .settings-page h3 {
 	padding-left: 20px;
 }
@@ -71,11 +72,49 @@
 .settings-page h1 {
 	color: black;
 	font-size: 2rem;
-	margin-bottom: 30px;
-	margin-top: 30px;
 	padding-left: 20px;
 }
 
 .settings-page hr {
 	margin-bottom: 30px;
+}
+
+.hidden * {
+	display: none;
+	border: 1px solid black;
+}
+
+.borderless {
+	border: none;
+}
+
+.settings-page .buttons-holder {
+	display: flex;
+	width: 100%;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.buttons-holder button {
+	width: 33%;
+	height: 2.5rem;
+	border-radius: 0.75em;
+	border: none;
+	font-weight: 500;
+	color: white;
+	transition: all 0.15s ease-in;
+}
+
+.buttons-holder button:hover {
+	cursor: pointer;
+	filter: brightness(125%);
+}
+
+.buttons-holder .cancel {
+	background-color: rgba(220, 53, 69, 1);
+}
+
+.buttons-holder .save {
+	background-color: rgba(0, 123, 255, 1);
 }
