--- a/src/Styles/SideBar.css
+++ b/src/Styles/SideBar.css
@@ -18,6 +18,7 @@
 	text-align: center;
 	padding-bottom: 10px;
 	width: 100%;
+	margin-bottom: 40px;
 }
 
 
@@ -41,16 +42,11 @@
     font-size: 2em;
     display: flex;
     padding-left: 10px;
-    /* padding-top: 8px; */
-    /* padding-bottom: 8px; */
-    /* padding-right: 10px; */
     margin-bottom: 15px;
-    /* box-shadow: 0px 5px 20px 5px  #3a154d; */
     overflow-y: hidden;
 	width: 60px;
 	margin-top: 10px;
 	margin-left: 10px;
-	/* margin-right: 10px; */
 }
 
 .sidebar .nav-buttons {
@@ -65,13 +61,16 @@
 .sidebar button {
 	border: none;
 	font-size: 20px;
+	justify-content: center;
+	transition: all 0.2s ease;
 }
 
 .nav-buttons button {
+	align-self: center;
 	text-align: start;
-	padding-left: 30px;
+	padding-left: 15px;
 	min-height: 60px;
-	width: 100%;
+	width: 220px;
 	font-size: 19px;
 	color: #9a8cf5;
 	background-color: transparent;
@@ -81,6 +80,12 @@
 
 .nav-buttons button:hover {
 	cursor: pointer;
+	min-height: 50px;
+	padding-left: 15px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	/* align-self: center; */
+	border-radius: 10px;
 	color: #b0a8f0;
 	background: rgb(35, 20, 67);
 }
@@ -121,4 +126,49 @@
 .sidebar button.logout-button:hover {
     color: #b0a8f0;
 	background: rgb(35, 20, 67);
+}
+
+
+@media screen and (max-width: 750px) {
+
+	.sidebar .logoText img {
+		padding-left: 0px;
+		margin-left: 10px;
+		
+		
+	}
+
+	.sidebar {
+		min-width: 80px;
+		max-width: 80px;
+	}
+
+	.nav-buttons button {
+		width: 50px;
+		transition: none;
+	}
+
+	.sidebar button.logout-button{
+		min-width: 45px;
+		max-width: 45px;
+		border: none;
+		font-size: 23px;
+		padding-right: 10px;
+		padding-left: 10px;;
+		max-height: 45px;
+		min-height: 45px;
+		color: rgb(241, 164, 164);
+		border: 0px solid transparent;
+	}
+
+	.logout-button i{
+		margin-top: 5px;
+		margin-right: 0px;
+	}
+
+	.sidebar button.logout-button:hover {
+		color: #f4cdd1;
+		background: rgb(239, 66, 66);
+	}
+
 }
