--- a/src/Widgets/StylesWidgets/WeatherWidgets.css
+++ b/src/Widgets/StylesWidgets/WeatherWidgets.css
@@ -96,7 +96,8 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    margin: 0;
+    /* margin: 0; */
+    /* margin-top: 100px; */
   }
   
   
